--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
     <div id="content">
         <h1 id="marx-zuckerburg">Marx Zuckerburg</h1>
 <div class="figure">
-<img src="assets/mz.jpg" alt="Photo of the author" />
-<p class="caption">Photo of the author</p>
+<img src="assets/mz.jpg" />
+
 </div>
+<hr />
+<h2 id="introduction">Introduction</h2>
+<p>Hello world.</p>
+<h2 id="thoughts-and-reflections">Thoughts and reflections</h2>
+<h3 id="laying-down-the-grundrisse-25-sep-2020">Laying down the <em>Grundrisse</em> (25 Sep 2020)</h3>
 
     </div>
 </body>
