--- a/index.html
+++ b/index.html
@@ -1,32 +1,106 @@
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style type='text/css'>
-    body {
-        font-family:'Baskerville', 'Libre Baskerville','Courier New', Courier, monospace;
-        /* text-align:center; */
-        /* font-size:1.1em; */
-    }
-    img {
-        display: block;
-        margin: 0 auto;
-        width: 200px;
-    }
-    h1 { text-align: center;}
-    #content {
-        max-width:600px;
-        margin: 0 auto;
-    }
+        @font-face {
+            font-family: KomradeFont;
+            src: url("assets/overpass-mono-regular.otf") format("opentype");
+        }
 
-    p { text-align: justify }
+        @font-face {
+            font-family: KomradeFontII;
+            src: url("assets/Strengthen.ttf");
+        }
 
+        body {
+            font-family: KomradeFont;
+            /* text-align:center; */
+            font-size: 1em;
+        }
+
+        code {
+            margin-left: 1em;
+            font-family: monospace;
+        }
+
+        a {
+            color: black;
+            text-decoration: underline;
+        }
+
+        /* Globally */
+        /* Each state */
+
+        a:visited {
+            text-decoration: underline;
+            color: black;
+        }
+
+        a:hover {
+            text-decoration: underline;
+            color: red;
+        }
+
+        a:focus {
+            text-decoration: underline;
+            color: black;
+        }
+
+        a:hover,
+        a:active {
+            text-decoration: underline;
+            color: red
+        }
+
+        img {
+            display: block;
+            margin: 0 auto;
+            max-width: 600px;
+
+        }
+
+        h1 {
+            text-align: center;
+            font-family: KomradeFontII;
+            font-size: 4em;
+            margin: 0 auto;
+            padding: 0;
+        }
+        h1 a { text-decoration: none; }
+        h1 a:visited { text-decoration: none; }
+        h1 a:hover { text-decoration: none; }
+        h1 a:focus { text-decoration: none; }
+        h1 a:hover, a:active { text-decoration: none; }
+
+        #content {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        p {
+            text-align: justify
+        }
     </style>
-    <title>Ryan Heuser</title>
+    <title>Komrade: a socialist network</title>
 </head>
+
 <body>
+
     <div id="content">
+        <h1 id="komrade"><a href="http://github.com/Komrade/Komrade">Komrade</a></h1>
+        <center>
+            <small><i>
+                <a href="https://github.com/Komrade/Komrade">Help develop</a> |
+                <a href="https://matrix.to/#/!YojbxvZclfEsvIeeUi:matrix.org?via=matrix.org">Help
+                    conceptualize</a> |
+                <a href="#install">Help test</a>
+            </i></small>
+        </center>
+        
+
         <h1 id="marx-zuckerburg">Marx Zuckerburg</h1>
 <div class="figure">
 <img src="assets/mz.jpg" />
@@ -41,4 +115,4 @@
     </div>
 </body>
 
-
+</html>
