--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <body>
 
-    <div id="content">
+    <!-- <div id="content">
         <h1 id="komrade"><a href="http://github.com/Komrade/Komrade">Komrade</a></h1>
         <center>
             <small><i>
@@ -99,7 +99,7 @@
                 <a href="#install">Help test</a>
             </i></small>
         </center>
-        
+         -->
 
         <h1 id="marx-zuckerburg">Marx Zuckerburg</h1>
 <div class="figure">
