--- a/theme.html
+++ b/theme.html
@@ -7,12 +7,12 @@
     <style type='text/css'>
         @font-face {
             font-family: KomradeFont;
-            src: url("assets/overpass-mono-regular.otf") format("opentype");
+            src: url("assets/font.otf") format("opentype");
         }
 
         @font-face {
             font-family: KomradeFontII;
-            src: url("assets/Strengthen.ttf");
+            src: url("assets/font.otf") format('opentype');
         }
 
         body {
