--- a/index.html
+++ b/index.html
@@ -106,11 +106,16 @@
 <img src="assets/mz.jpg" />
 
 </div>
-<hr />
-<h2 id="introduction">Introduction</h2>
-<p>Hello world.</p>
+<h2 id="preamble">Preamble</h2>
+<p>A spectre is haunting the internet: the spectre of communism.</p>
+<p>All the powers of the corporate internet have entered into a holy alliance to exorcise this spectre: Zuckerburg and Bezos, Google and Apple, neoconservatives and neoliberals.</p>
+<p>It is high time that Communists should openly, in the face of the whole world, publish their aims to overthrow this digital capitalism with its own digital tools.</p>
+<p>It is high time that Communists embrace and even accelerate the revolutionary potential of digital technology.</p>
+<p>The internet's deterritorialization, its near-instantaneous communication across vast distances and its infinite reproduction of intangible data, will be made tools for socialist revolution, not capitalist 'disruption.'</p>
+<p>It is high time we communise the internet, and take back its means of production, its means of communication, and the entire digital infrastructure which increasingly determines every aspect of our social and material life.</p>
 <h2 id="thoughts-and-reflections">Thoughts and reflections</h2>
 <h3 id="laying-down-the-grundrisse-25-sep-2020">Laying down the <em>Grundrisse</em> (25 Sep 2020)</h3>
+<p>...</p>
 
     </div>
 </body>
