--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
 <p>A spectre is haunting the internet: the spectre of communism.</p>
 <p>All the powers of the corporate internet have entered into a holy alliance to exorcise this spectre: Zuckerburg and Bezos, Google and Apple, neoconservatives and neoliberals.</p>
 <p>It is high time that Communists should openly, in the face of the whole world, publish their aims to overthrow this digital capitalism with its own digital tools.</p>
-<p>It is high time that Communists embrace and even accelerate the revolutionary potential of digital technology.</p>
-<p>The internet's deterritorialization, its near-instantaneous communication across vast distances and its infinite reproduction of intangible data, will be made tools for socialist revolution, not capitalist 'disruption.'</p>
-<p>It is high time we communise the internet, and take back its means of production, its means of communication, and the entire digital infrastructure which increasingly determines every aspect of our social and material life.</p>
+<p>It is high time that Communists embrace and even accelerate the deterritorialization wrought by technology.</p>
+<p>Near-instantaneous communication across vast distances and the infinite reproduction of intangible data will be made our tools for socialist revolution, not capitalist 'disruption.'</p>
+<p>It is high time we communise the internet and take back its means of production, communication, and the entire digital infrastructure which increasingly determines all aspects of our social and material life.</p>
+<p>I am building a 'socialist network' as an experiment in designing new socialist technologies. <a href="http://komrade.app">Please help</a>.</p>
+<p>These are my thoughts and reflections.</p>
 <h2 id="thoughts-and-reflections">Thoughts and reflections</h2>
 <h3 id="laying-down-the-grundrisse-25-sep-2020">Laying down the <em>Grundrisse</em> (25 Sep 2020)</h3>
 <p>...</p>
