--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
 <body>
 
-    <!-- <div id="content">
-        <h1 id="komrade"><a href="http://github.com/Komrade/Komrade">Komrade</a></h1>
+    <div id="content">
+        <!-- <h1 id="komrade"><a href="http://github.com/Komrade/Komrade">Komrade</a></h1>
         <center>
             <small><i>
                 <a href="https://github.com/Komrade/Komrade">Help develop</a> |
