--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 <p>It is high time that Communists embrace and even accelerate the deterritorialization wrought by technology.</p>
 <p>Near-instantaneous communication across vast distances and the infinite reproduction of intangible data will be made our tools for socialist revolution, not capitalist 'disruption.'</p>
 <p>It is high time we communise the internet and take back its means of production, communication, and the entire digital infrastructure which increasingly determines all aspects of our social and material life.</p>
-<p>I am building a 'socialist network' as an experiment in designing new socialist technologies. <a href="http://komrade.app">Please help</a>.</p>
-<p>These are my thoughts and reflections.</p>
-<h2 id="thoughts-and-reflections">Thoughts and reflections</h2>
+<p>I am building a <a href="http://komrade.app">'socialist network' called Komrade</a> as an experiment in designing new socialist technologies.</p>
+<p>The following are my thoughts and reflections on technology, labor, and culture.</p>
+<h2 id="fragments">Fragments</h2>
 <h3 id="laying-down-the-grundrisse-25-sep-2020">Laying down the <em>Grundrisse</em> (25 Sep 2020)</h3>
 <p>...</p>
 
