--- a/index.html
+++ b/index.html
@@ -107,16 +107,21 @@
 <img src="assets/mz.jpg" />
 
 </div>
+<h2 id="contact">Contact</h2>
+<ul>
+<li>email: mz@marxzuckerburg.com</li>
+<li>matrix: <span class="citation">[@marxzuckerberg:matrix.org]</span>(https://matrix.to/#/<span class="citation">@marxzuckerberg:matrix.org</span>)</li>
+<li>ssb: <span class="citation">@vQStP7Sx6dy423dhrJdTc8sW7lc/ItO3UpAqCWp3Iqc</span>=.ed25519</li>
+<li>twitter: <span class="citation">[@marxzuckerburg]</span>(https://twitter.com/marxzuckerburg)</li>
+</ul>
 <h2 id="preamble">Preamble</h2>
 <p>A spectre is haunting the internet: the spectre of communism.</p>
-<p>All the powers of the corporate internet have entered into a holy alliance to exorcise this spectre: Zuckerburg and Bezos, Google and Apple, neoconservatives and neoliberals.</p>
+<p>All the corporate powers of the internet have entered into a holy alliance to exorcise this spectre: Zuckerburg and Bezos, Google and Apple, neoconservatives and neoliberals.</p>
 <p>It is high time that Communists should openly, in the face of the whole world, publish their aims to overthrow this digital capitalism with its own digital tools.</p>
 <p>It is high time that Communists embrace and even accelerate technological change.</p>
-<p>Has the internet deterritorialized our social and material life? So be it.</p>
-<p>Near-instantaneous communication across vast distances and the infinite reproduction of intangible data will be made our tools: not of capitalist 'disruption' but of communist revolution.</p>
-<p>It is high time we seize the means of digital production.</p>
-<p>I am building a <a href="http://komrade.app">'socialist network' called Komrade</a> as an experiment in designing new socialist technologies.</p>
-<p>The following are my thoughts and reflections on that process, as well as on technology, labor, and society.</p>
+<p>Near-instantaneous communication across vast distances and the infinite reproduction of intangible data will be made our tools, not of capitalist 'disruption' but of communist revolution.</p>
+<p>It is high time we communise the internet.</p>
+<p>The following are my thoughts and reflections.</p>
 <h2 id="fragments">Fragments</h2>
 <h3 id="laying-down-the-grundrisse-25-sep-2020">Laying down the <em>Grundrisse</em> (25 Sep 2020)</h3>
 <p>...</p>
