--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </div>
 <h2 id="contact">Contact</h2>
 <ul>
-<li>email: mz@marxzuckerburg.com</li>
+<li>email: <a href="mailto:mz@marxzuckerburg.com">mz@marxzuckerburg.com</a></li>
 <li>matrix: <span class="citation">[@marxzuckerberg:matrix.org]</span>(https://matrix.to/#/<span class="citation">@marxzuckerberg:matrix.org</span>)</li>
 <li>ssb: <span class="citation">@vQStP7Sx6dy423dhrJdTc8sW7lc/ItO3UpAqCWp3Iqc</span>=.ed25519</li>
 <li>twitter: <span class="citation">[@marxzuckerburg]</span>(https://twitter.com/marxzuckerburg)</li>
