--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 <ul>
 <li>email: <a href="mailto:mz@marxzuckerburg.com">mz@marxzuckerburg.com</a></li>
 <li>matrix: @<a href="https://matrix.to/#/@marxzuckerberg:matrix.org">marxzuckerberg:matrix.org</a></li>
-<li>ssb: <span class="citation">@vQStP7Sx6dy423dhrJdTc8sW7lc/ItO3UpAqCWp3Iqc</span>=.ed25519</li>
 <li>twitter: @<a href="https://twitter.com/marxzuckerburg">marxzuckerburg</a></li>
+<li>project: <a href="https://komrade.app">komrade.app</a></li>
 </ul>
 <h2 id="preamble">Preamble</h2>
 <p>A spectre is haunting the internet: the spectre of communism.</p>
