--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <h1 id="marx-zuckerburg">Marx Zuckerburg</h1>
 <div class="figure">
-<img src="assets/mz.jpg" />
+<img src="assets/mz250.jpg" />
 
 </div>
 <ul>
