--- a/theme.html
+++ b/theme.html
@@ -85,7 +85,7 @@
             text-align: justify
         }
     </style>
-    <title>Komrade: a socialist network</title>
+    <title>Marx Zuckerburg</title>
 </head>
 
 <body>
