--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 
     <style type='text/css'>
         @font-face {
-            font-family: KomradeFont;
+            font-family: ComradFont;
             src: url("assets/font.otf") format("opentype");
         }
 
         @font-face {
-            font-family: KomradeFontII;
+            font-family: ComradFontII;
             src: url("assets/font.otf") format('opentype');
         }
 
         body {
-            font-family: KomradeFont;
+            font-family: ComradFont;
             /* text-align:center; */
             font-size: 1em;
         }
@@ -64,7 +64,7 @@
 
         h1 {
             text-align: center;
-            font-family: KomradeFontII;
+            font-family: ComradFontII;
             font-size: 4em;
             margin: 0 auto;
             padding: 0;
@@ -91,10 +91,10 @@
 <body>
 
     <div id="content">
-        <!-- <h1 id="komrade"><a href="http://github.com/Komrade/Komrade">Komrade</a></h1>
+        <!-- <h1 id="comrad"><a href="http://github.com/Comrad/Comrad">Comrad</a></h1>
         <center>
             <small><i>
-                <a href="https://github.com/Komrade/Komrade">Help develop</a> |
+                <a href="https://github.com/Comrad/Comrad">Help develop</a> |
                 <a href="https://matrix.to/#/!YojbxvZclfEsvIeeUi:matrix.org?via=matrix.org">Help
                     conceptualize</a> |
                 <a href="#install">Help test</a>
@@ -111,7 +111,7 @@
 <li>email: <a href="mailto:mz@marxzuckerburg.com">mz@marxzuckerburg.com</a></li>
 <li>matrix: @<a href="https://matrix.to/#/@marxzuckerberg:matrix.org">marxzuckerberg:matrix.org</a></li>
 <li>twitter: @<a href="https://twitter.com/marxzuckerburg">marxzuckerburg</a></li>
-<li>project: <a href="https://komrade.app">komrade.app</a></li>
+<li>project: <a href="https://comrad.app">comrad.app</a></li>
 </ul>
 <h2 id="preamble">Preamble</h2>
 <p>A spectre is haunting the internet: the spectre of communism.</p>
